fixed ui bug with video overlapping content

--- a/src/routes/Entertainment/components/Intro/intro.module.scss
+++ b/src/routes/Entertainment/components/Intro/intro.module.scss
@@ -57,7 +57,6 @@
     width: 100%;
     position: absolute;
     object-fit: cover;
-    margin-top: 64px;
     max-width: 1200px;
     z-index: 1;
 }
